# hexlet_pytest

./: .coverage  Makefile  README.md  pyproject.toml
hexlet_pytest/: example.py  stack.py
tests/: test_stack.py
